syntax = "proto3";

package example;

option go_package = ".";

import "google/api/annotations.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/user/create"
      body: "*"
    };
  }
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/user/{id}"
    };
  }
}

message CreateUserRequest {
  optional string email = 1;
  string name = 2 [deprecated = true];
}

message GetUserRequest {
  string id = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3 [deprecated = true];
}
